package com.example.learn.design.pattern.han._06行为型模式._02命令模式.core;


public class LightReceiver {

    public void on() {
        System.out.println(" 电灯打开了.. ");
    }

    public void off() {
        System.out.println(" 电灯关闭了.. ");
    }
}
